--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  height: 40vh;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
@@ -232,7 +233,7 @@ position: relative;
 width: 100%;
 background: #3586ff;
 min-height: 100px;
-top: 342px;
+top: 100%;
 padding: 20px 50px;
 display: flex;
 justify-content: center;
